components/Modal/ProjectModal/ProjectModal.module.scss
@import "@/styles/_variables.scss";

.modal {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: rgba(0, 0, 0, 0.5);
	z-index: 100;
}

.modalContent {
	background-color: #fff;
	padding: 4rem;
	border-radius: 15px;
	position: relative;
	max-width: 950px;
	max-height: calc(100vh - 5rem);
	height: 100%;
	width: 100%;
	overflow: auto;
}

.titleWrapper {
	display: flex;
	align-items: center;
	gap: 1.5rem;
}

.modalHeader {
	margin-top: 2rem;
	// border-bottom: 1px solid $stroke;
	// padding-bottom: 2.5rem;
}

.buttons {
	display: flex;
	gap: 1rem;
	margin-top: 3rem;
}

.closeButton {
	background: none;
	border: none;
	font-size: 20px;
	color: $black;
	cursor: pointer;
	svg {
		width: 16px;
	}
	position: absolute;
	top: 1.5rem;
	right: 1.5rem;
}

.modalFooter {
	display: flex;
	justify-content: flex-end;
}

.saveButton:hover {
	background-color: #0056b3;
}

.placeholder {
	position: relative;
	width: 100%;
	padding-top: 56.25%; /* 16:9 aspect ratio */
	border-radius: 10px;
	background: linear-gradient(to right, #3366cc, #2d82cc);
	margin-bottom: 1rem;
	&:hover {
		.video {
			opacity: 1;
		}
	}
}

.video,
.image {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	object-fit: cover;
	border-radius: 10px;
}

.placeholderIcon {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 25%;
	color: white;
}

.title {
	font-size: 28px;
}

.description {
	font-size: 16px;
	color: $dark-light;
	margin-top: 2rem;
	line-height: 1.5rem;
}

.profile {
	display: flex;
	align-items: center;
	margin-bottom: 0.75rem;
	img {
		width: 25px;
		height: 25px;
		border-radius: 50%;
	}
	p {
		font-weight: bold;
		margin-left: 0.75rem;
		font-size: 14px;
	}
}

.modalBody {
	// margin-top: 2.5rem;
	h3,
	pre,
	p {
		margin: 1rem 0;
	}

	p {
		line-height: 1.5rem;
	}

	h1,
	h2 {
		margin-top: 2rem;
	}

	h3 {
		margin-top: 1.5rem;
	}
	pre {
		background-color: #23241f;
		padding: 10px;
		border-radius: 5px;
		color: #f8f8f2;
		overflow: auto;
	}

	code {
		font-family: "Courier New", monospace;
		color: #333;
	}
}

